<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textSize="24dp"
        android:textStyle="bold"
        android:gravity="center"/>

    <TextView
        android:id="@+id/textViewUsernameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_below="@id/textViewTitle"
        android:layout_marginTop="15dp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/username"
        android:inputType="text"
        android:layout_below="@id/textViewUsernameLabel"
        android:layout_marginTop="15dp" />

    <TextView
        android:id="@+id/textViewEmailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_below="@id/username"
        android:layout_marginTop="15dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/email"
        android:inputType="text"
        android:layout_below="@id/textViewEmailLabel"
        android:layout_marginTop="15dp" />

    <TextView
        android:id="@+id/textViewPasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_below="@id/email"
        android:layout_marginTop="15dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_below="@id/textViewPasswordLabel"
        android:layout_marginTop="15dp" />

    <TextView
        android:id="@+id/textViewGenderLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Gender"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_below="@id/password"
        android:layout_marginTop="15dp" />

    <RadioGroup
        android:id="@+id/radioGroupGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewGenderLabel"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp">

        <RadioButton
            android:id="@+id/radioButtonMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_m" />

        <RadioButton
            android:id="@+id/radioButtonFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_f" />

        <RadioButton
            android:id="@+id/radioButtonOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_o" />

    </RadioGroup>

    <TextView
        android:id="@+id/textViewCountryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select Country"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_below="@id/radioGroupGender"
        android:layout_marginTop="15dp" />

    <Spinner
        android:id="@+id/spinnerCountry"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/textViewCountryLabel"
        android:layout_marginTop="10dp"
        android:entries="@array/countries" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinnerCountry"
        android:layout_marginTop="40dp"
        android:text="@string/signup" />


</RelativeLayout>